k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dc2d
spec:
  ports:
    - name: http-80
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: dc2d
